SERVER-48493 RSM's isMasterMonitor should handle network exceeded time limit errors